# termimad

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  deny.toml  fit-width-example.sh
.github/workflows/: deny.yml
examples/ask/: main.rs
examples/content-align/: main.rs
examples/fit-width/: main.rs
examples/fit_width/: main.rs
examples/high-compatibility/: README.md  main.rs
examples/incremental_print_markdown/: main.rs
examples/indented-code/: main.rs
examples/inline-template/: main.rs
examples/inputs/: main.rs  view.rs
examples/list_dirs/: main.rs
examples/parse-options/: main.rs
examples/progress/: main.rs
examples/render-input-markdown/: README.md  main.rs  view.rs
examples/scrollable/: main.rs
examples/serialize-skin/: main.rs
examples/simple/: main.rs
examples/skin-file/: main.rs  skin.hjson  skin.json
examples/stderr/: main.rs
examples/table/: main.rs
examples/templates/: main.rs
examples/text/: main.rs
examples/text-template/: main.rs
src/: area.rs  ask.rs  code.rs  color.rs  composite.rs  composite_kind.rs  compound_style.rs  displayable_line.rs  errors.rs  fit.rs  formatted.rs  inline.rs  lib.rs  line.rs  line_style.rs  list_indentation.rs  macros.rs  mad_view.rs  rect.rs  scrollbar_style.rs  skin.rs  spacing.rs  str_fit.rs  style.rs  styled_char.rs  table_border_chars.rs  tbl.rs  text.rs  text_view.rs  tokens.rs  wrap.rs
src/events/: escape_sequence.rs  event.rs  event_source.rs  mod.rs  tick_beam.rs  timed_event.rs
src/fit/: composite_fit.rs  crop_writer.rs  filling.rs  fit_error.rs  mod.rs  str_fit.rs  tbl_fit.rs  wrap.rs
src/parse/: mod.rs  parse_align.rs  parse_attribute.rs  parse_color.rs  parse_compound_style.rs  parse_line_style.rs  parse_styled_char.rs
src/serde/: deser_compound_style.rs  deser_line_style.rs  deser_skin.rs  deser_styled_char.rs  mod.rs  serde_compound_style.rs  serde_line_style.rs  serde_scrollbar_style.rs  serde_skin.rs  serde_styled_char.rs
src/views/: input_field.rs  input_field_content.rs  list_view.rs  mad_view.rs  md_join.rs  mod.rs  pos.rs  progress.rs  text_view.rs
