[package]
name = "termimad"
version = "0.19.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/termimad"
description = "Markdown Renderer for the Terminal"
edition = "2018"
keywords = ["markdown", "terminal", "tui", "renderer", "parser"]
license = "MIT"
categories = ["command-line-interface", "text-processing", "template-engine"]
readme = "README.md"

[features]
special-renders = []
default = ["special-renders"]

[dependencies]
minimad = "0.9.0"
coolor = { version="0.3", features=["crossterm"] }
crossterm = "0.21.0"
crossbeam = "0.8"
thiserror = "1.0"
unicode-width = "0.1.8"
# cli-log = "2.0"

[dev-dependencies]
anyhow = "1.0"
cli-log = "2.0"
terminal-clipboard = "0.3.1"

[patch.crates-io]
# coolor = { path = "../coolor" }
# crossterm = { path = "../crossterm" }
# minimad = { path = "../minimad" }
# terminal-clipboard = { path = "../terminal-clipboard" }
