[package]
name = "termimad"
version = "0.29.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/termimad"
description = "Markdown Renderer for the Terminal"
edition = "2021"
keywords = ["markdown", "terminal", "tui", "renderer", "parser"]
license = "MIT"
categories = ["command-line-interface", "text-processing", "template-engine"]
readme = "README.md"
rust-version = "1.56"
resolver = "1"

[features]
special-renders = []
default = ["special-renders"]

[dependencies]
coolor = { version="0.9.0", features=["crossterm"] }
crokey = "0.6.3"
crossbeam = "0.8"
lazy-regex = "3"
minimad = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
unicode-width = "0.1.10"
# cli-log = "2.0"

[dev-dependencies]
anyhow = "1.0"
cli-log = "2"
deser-hjson = "2"
pretty_assertions = "1.4"
serde_json = "1"
terminal-clipboard = "0.4.1"

[patch.crates-io]
# coolor = { path = "../coolor" }
# crokey = { path = "../crokey" }
# crossterm = { path = "../crossterm" }
# minimad = { path = "../minimad" }
# terminal-clipboard = { path = "../terminal-clipboard" }
